--- a/_config.yml
+++ b/_config.yml
@@ -21,7 +21,7 @@
 title: Mother of cats and Kai
 email: susan.prestage@gmail.com
 description: >- # this means to ignore newlines until "baseurl:"
-  Journal to track everything going on in my life.
+  Journals to track everything going on in my life.
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "" # the base hostname & protocol for your site, e.g. http://example.com
 twitter_username: jekyllrb
